Displayed 24 hour time
Displaying dim 24 hour time. Have to add extra functionality.

--- a/DigitalClock/board.ucf
+++ b/DigitalClock/board.ucf
@@ -56,4 +56,4 @@ NET	"IO_DSW<7>"		LOC = P67	|  PULLUP;
 #====================================================
 # Clock signal 
 NET "M_CLOCK" LOC = P123;
-
+NET "prob" LOC = P118;
